# shannon-prime-system

./: .gitattributes  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONVENTIONS.md  HISTORY.md  README.md
.github/workflows/: ci.yml  discord-commits.yml
cmake/: sp_module.cmake
core/arena/: CMakeLists.txt  arena.c  arena_test.c
core/arm/: CMakeLists.txt  arm.c  arm_geom_test.c  arm_scan.c  arm_test.c
core/exact_islands/: CMakeLists.txt  exact_islands.c  exact_islands_test.c
core/forward/: CMakeLists.txt  decode.c  forward.c  forward_test.c  gemma3.c  gemma4.c  generate.c  qwen25.c  qwen36.c  qwen36_gate.c
core/forward_dispatch/: CMakeLists.txt  forward_dispatch.c  forward_dispatch_test.c
core/forward_kernels/: CMakeLists.txt  forward_kernels.c  forward_kernels_test.c
core/frobenius/: CMakeLists.txt  frobenius_lift.c  frobenius_test.c
core/gguf/: CMakeLists.txt  gguf.c  gguf_test.c
core/io_format/: CMakeLists.txt  io_format_test.c  sp_error.c  sp_model_arch.c  sp_model_fixture.c  sp_model_fixture.h  sp_model_load.c
core/io_hash/: CMakeLists.txt  sp_hash.c  sp_hash_test.c
core/kste/: CMakeLists.txt  kste_dominance.c  kste_encode.c  kste_test.c
core/kste_md/: CMakeLists.txt  kste_md.c  kste_md_test.c
core/model/: CMakeLists.txt  model.c  model_test.c
core/ntt_crt/: CMakeLists.txt  ntt_batch.c  ntt_crt.c  ntt_crt_test.c  ntt_gen_fixture.c  ntt_ref_int128.c  ntt_ref_vectors.h
core/ok_arith/: CMakeLists.txt  ok_int.c  ok_int_test.c
core/poly_ring/: CMakeLists.txt  poly_ring.c  poly_ring_bluestein.c  poly_ring_test.c  resdot.c
core/ring3/: CMakeLists.txt  gen_ring3_fixture.py  ring3.c  ring3_gate.c
core/session/: CMakeLists.txt  arm_genkv_gate.c  gemma3_fixture.c  gemma3_fixture.h  gemma4_fixture.c  gemma4_fixture.h  qwen25_fixture.c  qwen25_fixture.h  qwen3_fixture.c  qwen3_fixture.h  session_test.c  sp_model_bridge.c  sp_session.c
core/sieve/: CMakeLists.txt  sieve_test.c  sp_sieve.c
core/sp_channel/: CMakeLists.txt  bench_sp_hedge.c  bench_ts_hedge.c  sp_channel_internal.h  sp_channel_map.c  sp_channel_probe.c  sp_channel_test.c  sp_hedge.c  test_sp_hedge.c
core/vht2/: CMakeLists.txt  mobius_reorder.c  spinor_block.c  spinor_test.c  vht2.c
core/weight_dtype/: CMakeLists.txt  weight_dtype.c  weight_dtype_test.c
core/xbar/: xbar_episode.c
include/sp/: arena.h  arm.h  exact_islands.h  forward_dispatch.h  forward_kernels.h  frobenius_lift.h  kste.h  kste_md.h  model.h  ntt_crt.h  ok_int.h  poly_ring.h  poly_ring_bluestein.h  ring3.h  sp_channel.h  sp_error.h  sp_l1.h  sp_model.h  sp_sieve.h  sp_status.h  sp_test.h  spinor_block.h  weight_dtype.h  xbar_episode.h
tests/: c2_kste_router_adv.c  c2_kv_measure.c  c2_ring2_measure.c  c2_router_proj.c  c2_sparse_recall.c  gemma4_gguf_forward_harness.c  gemma4_sp_model_top1.c  gemma4_top1_sp.c  kste_md_confirm.c  kste_md_measure.c  kste_md_realdata.c  qwen36_fwd_probe.c  qwen36_load_probe.c  qwen36_spmodel_top1.c  rep_hybrid.py  rep_layer.py  rep_qk.py  rep_sweep.py  sieve_measure.c
tests/fixtures/: g_int_1.c  g_int_1_hot.c
tools/curator/: curator_core.c  curator_replay.c  xbar_manifest_gate.c
